--- a/client/src/stylesheets/resume_name.css
+++ b/client/src/stylesheets/resume_name.css
@@ -1,4 +1,5 @@
 .resume-name {
+  z-index: 2;
   padding: 10px;
   margin-top: 0px;
 }
